# u-root

./: .cirrus.yml  .gitignore  .gitmodules  .golangci.yml  .mkuimage.yaml  .pullapprove.yml  .stickler.yml  .travis.yaml  .travis.yml  .vmtest.yaml  AI_POLICY.md  AUTHORS  BUILD.bazel  BUILDCORE  CITATION.cff  CNAME  CONTRIBUTING.md  Gopkg.toml  KVM  LICENSE  MAINTAINERS  MAINTAINERS.md  README  README.firmware  README.md  RELEASES  RUN  RUN_ME_FIRST  SECURITY.md  WORKSPACE  azure-pipelines.yml  build.bzl  build.go  codecov.yml  dependencies.go  flag.go  getgo  getsmallgo  glide.yaml  go.mod  (+18 more)
.circleci/: config.yml
.github/: auto-merge.yml  dependabot.yml
.travis/: tests.sh
EXAMPLES/: README  script.chroot  script.coreboot  script.kernelkvm
RFC/: rfc.bib
bb/: .gitignore  bb.go  buildinit.go  config.go  devCPIO.go  ramfs.go
bbnofork/: bb.go  buildinit.go  ramfs.go  (+1 more)
cmds/ansi/: BUILD.bazel  ansi.go  ansi_test.go
cmds/basename/: BUILD.bazel  basename.go  basename_test.go
cmds/boot/: BUILD.bazel  boot.go
cmds/boot/boot/: README.md  boot.go  boot_linux.go
cmds/boot/boot2/: boot.go
cmds/boot/checker/: main.go  main_test.go
cmds/boot/fbnetboot/: main.go
cmds/boot/fitboot/: main.go  main_linux.go
cmds/boot/fixmynetboot/: main.go
cmds/boot/localboot/: grub.go  grub_test.go  main.go  systemdboot.go
cmds/boot/netboot2/: netboot2.go
cmds/boot/netdiskboot/: README.md  config.go  netdiskBoot.go  network.go
cmds/boot/pxeboot/: pxeboot.go  pxeboot_linux.go
cmds/boot/stboot/: bootmode_jsonenums.go  data.go  data_test.go  hostvars.go  hostvars_test.go  main.go  network.go  stboot_test.go  time.go  txt.go
cmds/boot/stboot/testdata/: hostvars.json  hostvars_invalid.json
cmds/boot/systemboot/: main.go  systemboot_linux.go  uinit_linux.go  vpd.go
cmds/boot/uinit/: main.go  uinit_linux.go
cmds/boot2/: BUILD.bazel  boot.go
cmds/bzimage/: BUILD.bazel  bzimage.go
cmds/cbmem/: BUILD.bazel  io.go  main.go
cmds/cmp/: BUILD.bazel  cmp.go  cmp_test.go
cmds/comm/: BUILD.bazel  comm.go  comm_test.go
cmds/console/: BUILD.bazel  console.go  i8042_linux.go  termios.go  uart_linux.go
cmds/cp/: BUILD.bazel  cp.go  cp_plan9.go  cp_test.go  cp_unix.go
cmds/cpio/: .gitignore  BUILD.bazel  cpio.formats  cpio.go  cpio_test.go  dat.go  fs_unix.go  func.go  newc.go  types.go
cmds/cpio/pkg/: cpio.go  dat.go  fs_unix.go  types.go
cmds/cpio/pkg/newc/: dat.go  newc.go  newc_test.go
cmds/dd/: BUILD.bazel  dd.go  dd_test.go
cmds/df/: BUILD.bazel  df.go
cmds/dhclient/: BUILD.bazel  dhclient.go  dhclient_test.go  dhcp6_test.go  header.go  packSock.go  ssh.sh
cmds/dhclient/dhcp6client/: dhcp6client.go  dhcp6client_test.go  dhcp6server_test.go  icmp.go  options.go  packet.go  packetSock.go  packet_test.go
cmds/dirname/: BUILD.bazel  dirname.go  dirname_test.go
cmds/echo/: BUILD.bazel  echo.go  echo_test.go
cmds/false/: BUILD.bazel  false.go  false_test.go
cmds/field/: BUILD.bazel  field.go
cmds/find/: BUILD.bazel  find.go
cmds/free/: .free.go.swp  BUILD.bazel  free.go  free_linux.go  free_test.go
cmds/freq/: BUILD.bazel  freq.go
cmds/gpgv/: BUILD.bazel  gpgv.go
cmds/gpt/: BUILD.bazel  gpt.go
cmds/grep/: BUILD.bazel  grep.go  grep_test.go
cmds/hostname/: BUILD.bazel  hostname.go  hostname_test.go
cmds/init/: BUILD.bazel  bgbuild.go  build.go  env.go  init.go  init_linux.go  main.go  note.go  pkg.go  testflag.go  zdefaultcc.go  zosarch.go
cmds/insmod/: BUILD.bazel  insmod.go  insmod_linux.go
cmds/installcommand/: BUILD.bazel  installcommand.go
integration/: .gitignore  BUILD.bazel  GET_KERNEL_QEMU  README.md  RUNLOCAL  dhclient_test.go  fields.go  fields_test.go  gotest_test.go  integration.go  integration_test.go  io_test.go  kexec_test.go  multiboot_test.go  tcz_test.go  uinit_test.go
integration/generic-tests/: basic_test.go  brctl_test.go  dhclient_test.go  esxi_boot_test.go  fork_bomb_test.go  io_test.go  ip_test.go  kexec_test.go  main_test.go  multiboot_test.go  netcat_test.go  netstat_test.go  pxeboot_test.go  tc_test.go  tcz_test.go  tftp_test.go  traceroute_test.go  uefiboot_test.go  uinit_test.go  universalpayload_amd64_test.go  universalpayload_arm64_test.go  wc.go
integration/generic-tests-cpu/: io_linux_test.go  ip_linux_test.go  kexec_linux_test.go
integration/generic-tests/testdata/netcat/: ssl_192_168_0_2.crt  ssl_192_168_0_2.key  ssl_fd51_3681_1eb4__2.crt  ssl_fd51_3681_1eb4__2.key  ssl_netcat4.crt  ssl_netcat4.key  ssl_netcat4_192_168_0_2.crt  ssl_netcat4_192_168_0_2.key  ssl_netcat6.crt  ssl_netcat6.key  ssl_netcat6_fd51_3681_1eb4__2.crt  ssl_netcat6_fd51_3681_1eb4__2.key  ssl_u_root_netcat_CA.crt
integration/generic-tests/testdata/pxe/pxelinux.cfg/: default
integration/generic-tests/testdata/tc/: class.want  class.want.arm  filter.want  qdisc.want
integration/generic-tests/testdata/tczclient/8.x/x86_64/tcz/: libXcomposite.tcz.dep  libXdamage.tcz  libXdamage.tcz.dep  libxshmfence.tcz
integration/generic-tests/testdata/tczserver/8.x/x86_64/: libXdmcp.tcz
integration/generic-tests/testdata/tftp/: checksums.sha1  file_a.txt  file_b.txt  file_c.txt  small.txt
integration/golang-tests/: gotest_test.go
integration/gotests/: gotest_test.go
integration/internal/gotest/: gotest.go
integration/testcmd/: .gitignore
integration/testcmd/common/: common.go
integration/testcmd/generic/uinit/: generic.go
integration/testcmd/gotest/uinit/: gotest.go
integration/testcmd/helloworld/: helloworld.go
integration/testcmd/helloworld/uinit/: helloworld.go
integration/testcmd/io/uinit/: io.go
integration/testcmd/kexec/uinit/: kexec.go
integration/testcmd/pxeserver/: main.go
integration/testdata/: CONFIG  README.md  bzImage_amd64
integration/testdata/gotest/uinit/: gotest.go
integration/testdata/helloworld/uinit/: BUILD.bazel  helloworld.go
integration/testdata/io/uinit/: BUILD.bazel  io.go
integration/testdata/kexec/uinit/: BUILD.bazel  kexec.go
integration/testdata/pxe/pxelinux.cfg/: default
integration/testdata/tczclient/8.x/x86_64/tcz/: libXcomposite.tcz  libXinerama.tcz  libXinerama.tcz.dep
(+3948 files in other folders)
