load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/u-root/u-root
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["u-root.go"],
    importpath = "github.com/u-root/u-root",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/golang:go_default_library",
        "//pkg/uroot:go_default_library",
    ],
)

go_binary(
    name = "u-root",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
