load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["boot.go"],
    importpath = "github.com/u-root/u-root/cmds/boot2",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/diskboot:go_default_library",
        "//pkg/kexec:go_default_library",
        "//pkg/mount:go_default_library",
    ],
)

go_binary(
    name = "boot2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
