load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "const.go",
        "io.go",
        "main.go",
        "types.go",
    ],
    importpath = "github.com/u-root/u-root/cmds/cbmem",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cbmem",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
