load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cmp.go"],
    importpath = "github.com/u-root/u-root/cmds/cmp",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/rck/unit:go_default_library"],
)

go_binary(
    name = "cmp",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["cmp_test.go"],
    embed = [":go_default_library"],
)
