load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["comm.go"],
    importpath = "github.com/u-root/u-root/cmds/comm",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "comm",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["comm_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/testutil:go_default_library"],
)
