load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cp.go",
        "cp_plan9.go",
        "cp_unix.go",
    ],
    importpath = "github.com/u-root/u-root/cmds/cp",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cp",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["cp_test.go"],
    embed = [":go_default_library"],
)
