load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dd.go"],
    importpath = "github.com/u-root/u-root/cmds/dd",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/rck/unit:go_default_library"],
)

go_binary(
    name = "dd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["dd_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/testutil:go_default_library"],
)
