load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["df.go"],
    importpath = "github.com/u-root/u-root/cmds/df",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "df",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
