load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["false.go"],
    importpath = "github.com/u-root/u-root/cmds/false",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "false",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["false_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/testutil:go_default_library"],
)
