load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["field.go"],
    importpath = "github.com/u-root/u-root/cmds/field",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "field",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
