load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "free.go",
        "free_linux.go",
    ],
    importpath = "github.com/u-root/u-root/cmds/free",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "free",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["free_test.go"],
    embed = [":go_default_library"],
)
