load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["freq.go"],
    importpath = "github.com/u-root/u-root/cmds/freq",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "freq",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
