load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gpgv.go"],
    importpath = "github.com/u-root/u-root/cmds/gpgv",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/golang.org/x/crypto/openpgp/errors:go_default_library",
        "//vendor/golang.org/x/crypto/openpgp/packet:go_default_library",
    ],
)

go_binary(
    name = "gpgv",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
