load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gpt.go"],
    importpath = "github.com/u-root/u-root/cmds/gpt",
    visibility = ["//visibility:private"],
    deps = ["//pkg/gpt:go_default_library"],
)

go_binary(
    name = "gpt",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
