load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hostname.go"],
    importpath = "github.com/u-root/u-root/cmds/hostname",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hostname",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
