load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bgbuild.go",
        "init.go",
        "init_linux.go",
    ],
    importpath = "github.com/u-root/u-root/cmds/init",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmdline:go_default_library",
        "//pkg/uroot/util:go_default_library",
    ],
)

go_binary(
    name = "init",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
