load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "installcommand.go",
        "installcommand_linux.go",
    ],
    importpath = "github.com/u-root/u-root/cmds/installcommand",
    visibility = ["//visibility:private"],
    deps = ["//pkg/golang:go_default_library"],
)

go_binary(
    name = "installcommand",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
